AG-11613 Small dark mode fixes

--- a/documentation/ag-grid-docs/src/components/showcase/examples/hr-management/index.module.scss
+++ b/documentation/ag-grid-docs/src/components/showcase/examples/hr-management/index.module.scss
@@ -17,7 +17,6 @@
     font-size: 14px;
     button {
         font-weight: 600;
-        color: #4e4e4e;
     }
     display: flex;
     justify-content: space-between;
@@ -34,8 +33,8 @@
 
 .wrapper {
     display: flex;
-    background: #fcfcfc;
-    border: 1px solid rgb(223, 223, 223);
+    background: var(--color-bg-primary);
+    border: 1px solid var(--color-border-secondary);
     border-radius: 12px;
     overflow: hidden;
 }
